[gd_scene load_steps=5 format=2]

[ext_resource path="res://weapons/melee/damage_area/DamageArea.gd" type="Script" id=1]
[ext_resource path="res://art/temp/DanmageArea.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DamageArea" type="Area2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[connection signal="body_shape_entered" from="." to="." method="_on_DamageArea_body_shape_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
